--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Succulent</string>
     <!--    <string name="assets_path">"file:///android_asset/"</string>-->
     <string name="assets_file_name_plant">plant_info</string>
+
+    <string name="toolbar_title_succulent_list">多肉列表</string>
 </resources>
