--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <!--    <string name="assets_path">"file:///android_asset/"</string>-->
     <string name="assets_file_name_plant">plant_info</string>
 
-    <string name="toolbar_title_succulent_list">多肉列表</string>
+    <string name="toolbar_title_succulent_list">多肉鉴赏</string>
 </resources>
